@startuml
skinparam dpi 150

abstract class Application {
    -CanvasRenderingContext2D ctx
    +constructor()
}
class Tile {
    -CanvasRenderingContext2D ctx
    -number id
    -number width
    -number height
    -number x
    -number y

    +rndColor()
    +update()
    +draw()
}
Tile -> Application
'interface List
'interface Collection

'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

'class ArrayList {
'Object[] elementData
'size()
'}

'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml